--- a/templates/events/ads/video.html
+++ b/templates/events/ads/video.html
@@ -1,4 +1,5 @@
 {% if video_ad %}
+{% load i18n %}
 <div class="video-ad mb-4">
     <h5 class="text-center mb-3">🎥 {{ video_ad.title }}</h5>
     <div class="ratio ratio-16x9">
@@ -9,7 +10,7 @@
     </div>
     <div class="text-center mt-2">
         <a href="{{ video_ad.link }}" class="btn btn-sm btn-outline-primary">
-            Узнать больше
+            {% trans "Узнать больше" %}
         </a>
     </div>
 </div>
