--- a/templates/events/user_registrations.html
+++ b/templates/events/user_registrations.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Мои регистрации - EventHub{% endblock %}
+{% block title %}{% trans "Мои регистрации" %} - EventHub{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Мои регистрации</h2>
+    <h2>{% trans "Мои регистрации" %}</h2>
     
     {% if registrations %}
         <div class="row">
@@ -16,7 +17,7 @@
                         <p class="text-muted">{{ registration.event.date|date:"d M Y, H:i" }}</p>
                         <p>{{ registration.event.location }}</p>
                         <a href="{% url 'event_detail' registration.event.pk %}" class="btn btn-primary btn-sm">
-                            Подробнее
+                            {% trans "Подробнее" %}
                         </a>
                     </div>
                 </div>
@@ -25,7 +26,7 @@
         </div>
     {% else %}
         <div class="alert alert-info">
-            Вы еще не зарегистрированы ни на одно мероприятие.
+            {% trans "Вы еще не зарегистрированы ни на одно мероприятие." %}"
         </div>
     {% endif %}
 </div>
